2006-05-02  Robert Jordan  <robertj@gmx.net>

	* monoresgen.cs (TxtResourceReader/Writer): Support escapes
	(\n, \r, \t, \\) in input and output. Fixes bug #78270 and
	an internal TODO.

2006-04-11  Gert Driesen  <gert.driesen@telenet.be>
	    Raja R Harinath  <rharinath@novell.com>

	* Makefile (PROGRAM): Make profile-specific.
	(PROGRAM_COMPILE): Don't set.
	(CLEAN_FILES): Add 'resgen.exe'.

2005-01-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* monoresgen.cs: s/monoresgen/resgen/. Open the destination file with
	FileMode.Create. Fixes bug #52105.

2004-06-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* monoresgen.cs: fixed format exception in the po reader.

2004-05-20  Raja R Harinath  <rharinath@novell.com>

	* Makefile (PROGRAM_COMPILE): Define to $(BOOT_COMPILE).

2004-05-09  Gert Driesen <drieseng@users.sourceforge.net>

	* monoresgen.cs : use Assembly.Load with fullly qualified assembly
	name for loading swf assembly
	* monoresgen.exe.sources : added AssemblyInfo.cs, Consts.cs,
	Locale.cs

2004-03-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* monoresgen.cs:  don't create the output file on error reading the
	input. Fixes bug #55916.

2004-01-12  Miguel de Icaza  <miguel@ximian.com>

	* monoresgen.cs (PoResourceWriter.AddResource): Escape strings,
	fixes #52105

2003-12-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* monoresgen.cs: ignore entries marked as 'fuzzy' in .po files.

2003-12-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* monoresgen.cs: generate valid .po files. Fixes bug #52106.

2003-05-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* monoresgen.cs: added reader/writer for .po files.

Wed Mar 5 11:35:54 CET 2003 Paolo Molaro <lupus@ximian.com>

	* monoresgen.cs: patch from Ian MacLean <ianm@ActiveState.com>
	to add the /compile option.

2003/01/22  Nick Drochak <ndrochak@gol.com>

	* makefile: assume csc for makefile, and mcs for makfile.gnu.

2002-08-19  Dick Porter  <dick@ximian.com>
